[package]
version = "0.1.0"
name = "{{project-name}}"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["{{authors}}"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[dependencies]
seed = "0.10.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
